force-app/main/default/objects/DU_BopConfiguration__mdt/DU_BopConfiguration__mdt.object-meta.xml
<CustomObject>
    <description>Configuration parameters for BOP.</description>
    <label>BOP Configuration</label>
    <pluralLabel>BOP Configuration</pluralLabel>
</CustomObject>