force-app/main/default/objects/DU_BopConfiguration__mdt/fields/DU_BffApiKey__c.field-meta.xml
<CustomField>
    <fullName>DU_BffApiKey__c</fullName>
    <defaultValue>&quot;CHANGETHIS&quot;</defaultValue>
    <label>BFF API Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>