force-app/main/default/objects/DU_BopConfiguration__mdt/fields/DU_IsTimeoutApplicable__c.field-meta.xml
<CustomField>
    <fullName>DU_IsTimeoutApplicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Timeout Applicable?</label>
    <type>Checkbox</type>
</CustomField>