force-app/main/default/objects/DU_BopConfiguration__mdt/fields/DU_RetentionPeriod__c.field-meta.xml
<CustomField>
    <fullName>DU_RetentionPeriod__c</fullName>
    <defaultValue>30</defaultValue>
    <inlineHelpText>In Days</inlineHelpText>
    <label>Retention Period</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>