force-app/main/default/objects/DU_BopConfiguration__mdt/fields/DU_TimeoutNotificationEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>DU_TimeoutNotificationEmailAddress__c</fullName>
    <defaultValue>&quot;dummy@example.com.invalid&quot;</defaultValue>
    <label>Timeout Notification Email Address</label>
    <type>Email</type>
</CustomField>