force-app/main/default/objects/DU_BopConfiguration__mdt/validationRules/DU_EmailAddressMandatoryIfTimeoutApplies.validationRule-meta.xml
<ValidationRule>
    <fullName>DU_EmailAddressMandatoryIfTimeoutApplies</fullName>
    <active>true</active>
    <description>Timeout Notification Email Address cannot be empty when timeout is applicable</description>
    <errorConditionFormula>DU_IsTimeoutApplicable__c &amp;&amp; ISBLANK( DU_TimeoutNotificationEmailAddress__c)</errorConditionFormula>
    <errorDisplayField>DU_TimeoutNotificationEmailAddress__c</errorDisplayField>
    <errorMessage>Timeout Notification Email Address cannot be empty when timeout is applicable</errorMessage>
</ValidationRule>