force-app/main/default/objects/DU_BopConfiguration__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>DeveloperName</columns>
    <columns>DU_RetentionPeriod__c</columns>
    <columns>DU_BffApiKey__c</columns>
    <columns>DU_IsTimeoutApplicable__c</columns>
    <columns>DU_TimeoutNotificationEmailAddress__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>